--- a/cost-of-prefab-home-canada/index.html
+++ b/cost-of-prefab-home-canada/index.html
@@ -191,7 +191,7 @@
             insulation upgrades, and winterization. Use it to plan realistically and avoid expensive surprises.
           </p>
 
-          <div class="pillrow">
+          <div class="pillrow" aria-label="Key points">
             <span class="pill2">Installed-cost mindset</span>
             <span class="pill2">Canada climate realities</span>
             <span class="pill2">Permits + documentation</span>
@@ -211,7 +211,8 @@
 
         <aside class="hero-media" aria-label="Page navigation">
           <div class="media-inner">
-            <figure class="hero-figure">
+
+            <figure class="hero-figure" style="margin:0;">
               <picture>
                 <source type="image/webp"
                   srcset="/assets/images/hero/cost-of-prefab-home-canada-1600x900.webp 1600w,
@@ -225,15 +226,17 @@
                   alt="Modern prefab home site in Canada with realistic installation context – cost breakdown guide"
                   loading="eager"
                   decoding="async"
-                  fetchpriority="high">
+                  fetchpriority="high"
+                  style="display:block;width:100%;height:auto;border-radius:0;">
               </picture>
               <figcaption class="small muted">Installed cost = listing price + site + approvals + utilities + climate upgrades.</figcaption>
             </figure>
 
-            <div class="noteBox toc tocBox">
-              <h2 class="tocTitle">On this page</h2>
+            <nav class="tocBox toc" aria-label="On this page">
+              <p class="tocTitle" style="margin:0 0 6px; font-weight:900;">On this page</p>
               <p class="small tocSub">Use these anchors to skip to what you need.</p>
-              <ul class="specs tocList">
+
+              <ul class="tocList">
                 <li><a href="#what-is-real">Why the listing price isn’t the real price</a></li>
                 <li><a href="#breakdown">Installed cost breakdown (Canada)</a></li>
                 <li><a href="#scenarios">Example scenarios (small / mid / larger)</a></li>
@@ -241,7 +244,7 @@
                 <li><a href="#faq">FAQ</a></li>
                 <li><a href="/disclosure/">Affiliate disclosure</a></li>
               </ul>
-            </div>
+            </nav>
 
           </div>
         </aside>
@@ -694,8 +697,6 @@
           <li><a href="/about/">About</a></li>
           <li><a href="/disclosure/">Disclosure</a></li>
           <li><a href="/privacy-policy/">Privacy policy</a></li>
-          <!-- Keep this ONLY if you actually create /contact/ -->
-          <!-- <li><a href="/contact/">Contact</a></li> -->
         </ul>
       </nav>
     </div>
