--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -160,7 +160,7 @@
             <span class="pill2">Cookies</span>
             <span class="pill2">Analytics</span>
             <span class="pill2">Affiliate links</span>
-            <span class="pill2">Contact</span>
+            <span class="pill2">Your choices</span>
           </div>
 
           <p class="disclaimer hero-disclaimer">
@@ -227,14 +227,6 @@
 
         <div class="grid">
           <div class="card grid-span-6">
-            <h3>Information you provide</h3>
-            <ul class="specs">
-              <li>If you contact us (for example via email or a contact form), you may provide your name, email address, and message content.</li>
-              <li>If you include personal details in your message, we will receive them.</li>
-            </ul>
-          </div>
-
-          <div class="card grid-span-6">
             <h3>Information collected automatically</h3>
             <ul class="specs">
               <li>IP address (often used for security, fraud prevention, and approximate location)</li>
@@ -242,12 +234,19 @@
               <li>Pages visited, time on page, clicks, and general usage patterns</li>
             </ul>
           </div>
+
+          <div class="card grid-span-6">
+            <h3>Information you provide (only if enabled)</h3>
+            <ul class="specs">
+              <li>If the site provides a direct contact method (for example, an email address), and you choose to use it, you may provide message content and identifying details.</li>
+              <li>If no direct contact method is listed, this type of collection may not apply.</li>
+            </ul>
+          </div>
         </div>
 
         <div class="noteBox noteBox--mt14">
           <p class="small noteBoxText">
-            We aim to collect only what we need to operate and improve the site. If a feature is not enabled (for example, a contact form),
-            then the related collection may not apply.
+            We aim to collect only what we need to operate and improve the site. If a feature is not enabled, then the related collection may not apply.
           </p>
         </div>
       </div>
@@ -316,7 +315,7 @@
           <div class="card grid-span-6">
             <h3>Service providers</h3>
             <p>
-              We may use service providers (hosting, analytics, email tools) who process information on our behalf to operate the site.
+              We may use service providers (hosting, analytics, measurement tools) who process information on our behalf to operate the site.
               They are expected to protect data and use it only for the service provided.
             </p>
           </div>
@@ -345,10 +344,10 @@
           </div>
 
           <div class="card grid-span-6">
-            <h3>Contact requests</h3>
+            <h3>Analytics choices</h3>
             <p>
-              If you contact us and want us to delete the message thread, you can request it (see Contact below).
-              We may keep limited records when needed for security or compliance.
+              You can reduce analytics collection by using browser privacy controls, blocking third-party cookies, or using privacy-focused browser settings.
+              Some aggregated measurement may still occur depending on configuration.
             </p>
           </div>
         </div>
@@ -361,7 +360,7 @@
         <h2>Security</h2>
         <p>
           We use reasonable safeguards to protect information. However, no method of transmission or storage is 100% secure.
-          Please avoid sending sensitive personal information through basic contact channels.
+          Please avoid sending sensitive personal information through basic channels.
         </p>
       </div>
     </section>
@@ -381,13 +380,13 @@
       <div class="wrap">
         <h2>Contact</h2>
         <p>
-          Questions about this Privacy Policy? Contact PrefabHomesCanada via the method listed on the site’s contact page (if available),
-          or use the email address you provide in your website footer/contact section.
+          Questions about this Privacy Policy? PrefabHomesCanada may not provide direct individual support.
+          If a direct contact method is listed on the site, you may use it for policy-related questions.
         </p>
 
         <div class="noteBox noteBox--mt14">
           <p class="small noteBoxText">
-            Tip: If you create a <code>/contact/</code> page later, add it to the header/footer nav and then update this section to point to it.
+            You can always manage cookies and tracking through your browser settings, regardless of whether a direct contact method is available.
           </p>
         </div>
       </div>
