--- a/disclosure/index.html
+++ b/disclosure/index.html
@@ -13,8 +13,25 @@
   <meta name="referrer" content="strict-origin-when-cross-origin">
   <meta name="color-scheme" content="dark light">
   <meta name="theme-color" content="#0b1020">
+  <meta name="author" content="PrefabHomesCanada Editorial">
 
   <link rel="stylesheet" href="/assets/css/styles.css">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="PrefabHomesCanada">
+  <meta property="og:title" content="Disclosure (Canada, 2026) | PrefabHomesCanada">
+  <meta property="og:description" content="How affiliate links work, how we may earn commissions, and how we keep recommendations independent for Canadian buyers.">
+  <meta property="og:url" content="https://prefabhomescanada.github.io/disclosure/">
+  <meta property="og:image" content="https://prefabhomescanada.github.io/assets/images/og/disclosure-1200x630.webp">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Disclosure (Canada, 2026) | PrefabHomesCanada">
+  <meta name="twitter:description" content="How affiliate links work, how we may earn commissions, and how we keep recommendations independent for Canadian buyers.">
+  <meta name="twitter:image" content="https://prefabhomescanada.github.io/assets/images/og/disclosure-1200x630.webp">
     
   <!-- Google tag (GA4) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-5TC3NKCHW5"></script>
@@ -133,10 +150,10 @@
       <li>Understand delivery, foundation, and installation requirements</li>
     </ul>
 
-    <h2>Contact</h2>
+    <h2>Questions</h2>
     <p>
-      If you have questions about this disclosure or how affiliate links are used on this site,
-      you may contact us via the information provided on our website.
+      PrefabHomesCanada may not provide direct individual support.
+      This disclosure is published to explain how affiliate links work and how we keep recommendations independent.
     </p>
 
     <div class="sep"></div>
